public interface Taxable {
}